final edits of the report

--- a/final_report/heidi_final_report.html
+++ b/final_report/heidi_final_report.html
@@ -1049,10 +1049,10 @@ Dual Logistic Regression.</font></p>
 </tbody>
 </table>
 <p>By combining the decisions of the two models, as mentioned
-previously, we were able to achieve our highest precision score of 0.76
-and highest recall score of 0.64 on the test set (<strong>Table
-6</strong>). This signifies a significant improvement in the overall
-performance of our prediction system.</p>
+previously, we were able to achieve our highest precision score of
+<strong>0.76</strong> and highest recall score of <strong>0.64</strong>
+on the test set (<strong>Table 6</strong>). This signifies a significant
+improvement in the overall performance of our prediction system.</p>
 </div>
 </div>
 </div>
